leptos_macro/tests/ui/view/block_in_fragment.rs
use leptos::*;

struct A;

fn main() {
    view! {
        <>{A}</>
    };
}
